change stock to coin

--- a/src/analyze.html
+++ b/src/analyze.html
@@ -17,7 +17,7 @@
 
 
     <div class="d-flex justify-content-center pb-2 m-2" style="color: rgba(0,0,0,0.8)">
-        <h3>Analyze stock Performance</h3>
+        <h3>Analyze Coin Performance</h3>
     </div>
     <div class="container">
         <div class="form-group">
@@ -27,7 +27,7 @@
                     onchange="updatePriceChart('min');updateSelected($('#btnSelectMin'))" required>
                     <option value="" disabled selected></option>
                 </select>
-                <label class="mdc-floating-label">Select Stock</label>
+                <label class="mdc-floating-label">Select Coin</label>
                 <div class="mdc-line-ripple"></div>
             </div>
         </div>
@@ -35,7 +35,7 @@
         <nav>
             <div class="nav nav-pills nav-justified nav-fill" id="nav-tab" role="tablist">
                 <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-price" role="tab"
-                    aria-selected="true">Stock Price</a>
+                    aria-selected="true">Coin Price</a>
                 <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-indicators" role="tab"
                     aria-selected="false">Key Indicators</a>
             </div>
