--- a/src/index.html
+++ b/src/index.html
@@ -101,19 +101,19 @@
                 <div class="stocks w-50 main-container">
                     <div class="d-flex justify-content-between align-items-center">
 
-                        <h3>Your Stocks</h3>
+                        <h3>Your CryptoCurrencies</h3>
                         <div class="dropdown">
                             <button class="mdc-fab mdc-fab--extended" type="button" id="dropdownMenuButton"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="material-icons mdc-fab__icon">add</span>
-                                <span class="mdc-fab__label">Add stock</span>
+                                <span class="mdc-fab__label">Add Coin</span>
                             </button>
 
                             <div class="dropdown-menu p-2" style="width:15rem !important;"
                                 aria-labelledby="dropdownMenuButton">
                                 <div id="the-basics">
                                     <input class="typeahead form-control w-100" type="search"
-                                        placeholder="Search for a stock" id="typeahead">
+                                        placeholder="Search for a Coin" id="typeahead">
                                 </div>
 
                                 <div class="dropdown-divider"></div>
@@ -133,7 +133,7 @@
                             <div class="mdc-notched-outline">
                                 <div class="mdc-notched-outline__leading"></div>
                                 <div class="mdc-notched-outline__notch">
-                                    <label class="mdc-floating-label">Search Stocks</label>
+                                    <label class="mdc-floating-label">Search Coins</label>
                                 </div>
                                 <div class="mdc-notched-outline__trailing"></div>
                             </div>
@@ -141,7 +141,7 @@
                         <div>
                             <ul class="list-group mdc-list" id="myStocks">
                                 <li class="list-group-item justify-content-center align-items-center">
-                                    Loading Stocks..
+                                    Loading Coin Data..
                                 </li>
 
 
