--- a/src/predict.html
+++ b/src/predict.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="d-flex justify-content-center pb-2 m-2" style="color: rgba(0,0,0,0.8)">
-        <h3>Forecast Stock Performance</h3>
+        <h3>Forecast Coin Performance</h3>
     </div>
     <div class="container">
         <div class="form-group">
@@ -25,7 +25,7 @@
                 <select class="mdc-select__native-control" id="stocksList" required>
                     <option value="" disabled selected></option>
                 </select>
-                <label class="mdc-floating-label">Select Stock</label>
+                <label class="mdc-floating-label">Select Coin</label>
                 <div class="mdc-line-ripple"></div>
             </div>
         </div>
