--- a/src/notify.html
+++ b/src/notify.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="d-flex justify-content-center pb-2 m-2" style="color: rgba(0,0,0,0.8)">
-        <h3>Add Stock Alerts</h3>
+        <h3>Add Coin Alerts</h3>
     </div>
     <nav>
         <div class="nav nav-tabs nav-justified" id="nav-tab" role="tablist">
@@ -38,7 +38,7 @@
                                 required>
                                 <option value="" disabled selected></option>
                             </select>
-                            <label class="mdc-floating-label">Select Stock</label>
+                            <label class="mdc-floating-label">Select Coin</label>
                             <div class="mdc-line-ripple"></div>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                             <div class="mdc-notched-outline">
                                 <div class="mdc-notched-outline__leading"></div>
                                 <div class="mdc-notched-outline__notch">
-                                    <label for="tf-outlined" class="mdc-floating-label">Target Stock Price</label>
+                                    <label for="tf-outlined" class="mdc-floating-label">Target Coin Price</label>
                                 </div>
                                 <div class="mdc-notched-outline__trailing"></div>
                             </div>
@@ -106,7 +106,7 @@
             <table class="table table-hover">
                 <thead>
                     <tr>
-                        <th scope="col">Stock Index</th>
+                        <th scope="col">Coin Index</th>
                         <th scope="col">Target Price</th>
                         <th scope="col">Auto Renew</th>
                         <th scope="col">Frequency</th>
