change stock to price (js files)

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,11 @@
                         insert_chart
                     </i>
                 </a>
+                <div class="tabs">
+                <button id="main-btn" href="#main"><img src="images/appbar.stock.png"></button>
+                <button id="portfolio-btn" href="#portfolio"><img src="images/appbar.pie.png"></button>
+                <button id="settings-btn" href="#settings"><img src="images/appbar.settings.png"></button>
+                </div>
 
             </div>
             <div id="about">
@@ -198,7 +203,7 @@
                     </div>
                 </div>
                 <footer class="mdc-dialog__actions">
-                    <a onclick="openAPIWin()" href="javascript:void(0)">Obtain API Key</a>
+                    <!--<a onclick="openAPIWin()" href="javascript:void(0)">Obtain API Key</a>-->
                     <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="no">
                         <span class="mdc-button__label">Cancel</span>
                     </button>
